--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@types/react-dom": "16.8.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
     "typescript": "3.3.3333"
   },
   "scripts": {
@@ -26,5 +29,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "random ticket draw",
+  "main": "index.js",
+  "author": "Sean Walsh <sdwalsh@mirango.io>",
+  "license": "MIT"
 }
